--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "new-pendataran-coc-ui",
+  "name": "pendaftaran-seminar",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,6 +11,7 @@
   "dependencies": {
     "js-cookie": "^3.0.5",
     "next": "^15.5.4",
+    "perfect-scrollbar": "^1.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
